test/src/e2e_vm_tests/test_programs/should_fail/multiple_impl_abi/src/main.sw
contract;

abi MyContract {
    fn test_function() -> bool;
}

impl MyContract for Contract {
    fn test_function() -> bool {
        true
    }
    fn test_function() -> bool {
        true
    }
}
